--- a/package.json
+++ b/package.json
@@ -7,11 +7,16 @@
     "dev": "nodemon src/app.js"
   },
   "dependencies": {
+    "axios": "^1.6.0",
+    "axios-cookiejar-support": "^4.0.0",
     "cors": "^2.8.5",
     "express": "^4.18.2",
-    "mongoose": "^8.0.0"
+    "tough-cookie": "^4.1.3"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
+  },
+  "engines": {
+    "node": "18.x"
   }
 }
