--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "@fortawesome/fontawesome-free": "^6.5.1",
     "@popperjs/core": "^2.11.8",
     "aos": "^2.3.4",
+    "axios": "^1.6.5",
     "bootstrap": "^5.3.2",
+    "socket.io-client": "^4.7.4",
     "sweetalert2": "^11.10.1",
     "typed.js": "^2.1.0",
     "vanilla-tilt": "^1.8.1",
