--- a/package.json
+++ b/package.json
@@ -1,28 +1,34 @@
 {
-  "name": "fiona-landing",
-  "version": "1.0.0",
-  "private": true,
-  "type": "module",
+  "name": "wanzdb-backend",
+  "version": "2.1.0",
+  "description": "Backend for WanzDB Serverless Console",
+  "main": "server.js",
   "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview"
+    "start": "node server.js",
+    "dev": "nodemon server.js"
   },
+  "keywords": [
+    "mongodb",
+    "express",
+    "vercel",
+    "serverless"
+  ],
   "dependencies": {
-    "@fortawesome/fontawesome-free": "^6.5.1",
-    "@popperjs/core": "^2.11.8",
-    "aos": "^2.3.4",
-    "axios": "^1.6.5",
-    "bootstrap": "^5.3.2",
-    "socket.io-client": "^4.7.4",
-    "sweetalert2": "^11.10.1",
-    "typed.js": "^2.1.0",
-    "vanilla-tilt": "^1.8.1",
-    "vue": "^3.4.15",
-    "vue-router": "^4.2.5"
+    "axios": "^1.6.8",
+    "bcryptjs": "^2.4.3",
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
+    "express": "^4.19.2",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.2.4",
+    "qrcode": "^1.5.3",
+    "speakeasy": "^2.0.0",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
-    "@vitejs/plugin-vue": "^5.0.3",
-    "vite": "^5.0.11"
+    "nodemon": "^3.1.0"
+  },
+  "engines": {
+    "node": ">=18.x"
   }
 }
