--- a/package.json
+++ b/package.json
@@ -1,34 +1,19 @@
 {
-  "name": "wanzdb-backend",
-  "version": "2.1.0",
-  "description": "Backend for WanzDB Serverless Console",
-  "main": "server.js",
+  "name": "wanzofc-backend",
+  "version": "1.0.0",
+  "description": "Backend API for Wanzofc AI",
+  "main": "index.js",
   "scripts": {
-    "start": "node server.js",
-    "dev": "nodemon server.js"
+    "start": "node index.js",
+    "dev": "nodemon index.js"
   },
-  "keywords": [
-    "mongodb",
-    "express",
-    "vercel",
-    "serverless"
-  ],
   "dependencies": {
-    "axios": "^1.6.8",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
-    "dotenv": "^16.4.5",
-    "express": "^4.19.2",
+    "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.2.4",
-    "qrcode": "^1.5.3",
-    "speakeasy": "^2.0.0",
-    "uuid": "^9.0.1"
-  },
-  "devDependencies": {
-    "nodemon": "^3.1.0"
-  },
-  "engines": {
-    "node": ">=18.x"
+    "mongoose": "^7.6.3",
+    "otplib": "^12.0.1",
+    "qrcode": "^1.5.3"
   }
 }
